# fast-api

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: app.py  models.py
day10-tools/: ai_client.py  ai_tools.py  crud.py  function_call_test.py
day11-merge/: ai_tools.py  main.py
day11_merge/: database.py  models.py  stream_test.py
day5/: database.py  main.py  todos.db
day6/: main.py  models.py
day7/: models.py
day8/: ai_client.py  main.py  system_test.py  system_test2.py  system_test3.py  system_test4.py
day9/: ai_client.py  main.py
gemini-experience/: ai_client.py  main.py
week3-day1/: chroma_test.py
week3-day2/: embedding_test.py
week3-day3/: ai_client.py  ai_tools.py  build_knowledge_base.py  chroma_test.py  chunking.py  chunking_tet.py  rag.py  rag_test.py  sample_docs.py  vector_store.py
