[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "google-genai>=2.11.0",
    "imagekitio>=5.7.0",
    "numpy>=2.5.1",
    "onnxruntime<1.20",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]
